# HTML-CSS

./: .gitignore  README.md
Camera Detection/: main.py
Clear CSharp/Boxing. Unboxing/: Boxing. Unboxing.sln
Clear CSharp/Build Home/: BuildHome HW.sln
Clear CSharp/Checked. Unchecked/: Checked. Unchecked.sln
Clear CSharp/Delegates. Events/: Std delegated.sln
Clear CSharp/Dispose. FileStream/: Dispose. FileStream.sln
Clear CSharp/Event Handler/: EventHandler demo.sln
HTML/HW/: clock.html  (+1 more)
HW/: model.html
Lesson 1/: Lorem.html
Lesson 6/: Menu.html
Lesson 9/: awesome-model.html
Practice/: EleventhPractice.py  FirstPractice.cpp  FourteenthPractice.py  FourthPractice.cpp  NinePractice_Part1.cpp  NinePractice_Part2.cpp  SixthPractice.cpp  TenthPractice.py  ThirdPractice.cpp  TwelvePractice.py
Test/: animations.html  transitions.html  translate.html
University Labs/: Binary.py  Exponentiation.py  Fibonacci.py  InfoNumber.py  Lab 2.py  Paper.py  SecondTest.py  SinusArea.py  SortInTwo.py  SumOfSquares.py
University Labs/Lissajous/: CMakeLists.txt  Model.cpp  Model.h  Wyswietanie.cpp  Wyswietanie.h  main.cpp  sterowanie.cpp  sterowanie.h
University Labs/labCpp/: CMakeLists.txt  generatorlosowy.cpp  generatorlosowy.h  kwadrat.cpp  kwadrat.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  ustawienia.h  zlab02.cpp  zlab02.h  zlab03.cpp  zlab03.h  zlab06.cpp  zlab06.h  zlab09.cpp  zlab09.h  zlab10.cpp  zlab10.h  zlab12.cpp  zlab12.h
(+499 files in other folders)
