cmake_minimum_required(VERSION 3.23)
project(labCpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(labCpp
        main.cpp
        zlab02.cpp
        zlab02.h
        zlab03.h
        zlab03.cpp
        organizm.h
        organizm.cpp
        ustawienia.h
        generatorlosowy.h
        generatorlosowy.cpp
        sasiedztwo.cpp
        sasiedztwo.h
        kwadrat.cpp
        kwadrat.h
        zlab06.cpp
        zlab06.h
        mieszkaniec.cpp
        mieszkaniec.h
        osobniki.cpp
        osobniki.h
        nisza.cpp
        nisza.h
        zlab09.cpp
        zlab09.h
        zlab10.cpp
        zlab10.h
        srodowisko.h
        srodowisko.cpp
        zlab12.cpp
        zlab12.h
)
